--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="Web site created using create-react-app"
     />
 
-    <title>Nomflix</title>
+    <title>SJ_flix</title>
   </head>
   <body>
     
